--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-playground-presentation-mode",
-  "version": "0.0.10",
+  "version": "0.5.0",
   "main": "dist/index.js",
   "author": "Orta Therox",
   "license": "MIT",
@@ -20,6 +20,7 @@
     "concurrently": "^5.1.0",
     "monaco-editor": "^0.19.3",
     "node-fetch": "^2.6.0",
+    "react": "^16.13.1",
     "rollup": "^1.31.0",
     "serve": "^11.3.0",
     "typescript": " 3.8.0-beta"
