--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "typescript-playground-presentation-mode",
-  "version": "0.5.0",
+  "description": "Present your TypeScript talk directly in the playground, powered by GitHub gists!",
+  "repository": {
+    "url": "https://github.com/orta/playground-slides"
+  },
+  "version": "0.5.1",
   "main": "dist/index.js",
   "author": "Orta Therox",
   "license": "MIT",
